<resources>
    <string name="app_name">Trip Planner</string>
    <string name="title_activity_view_trip">ViewTrip</string>
    <string name="start_trip_view">Strat</string>
    <string name="delete_trip_view">Delete</string>
    <string name="done_trip_view">Done</string>
    <string name="start_point">Start Point</string>
    <string name="end_point">End Point</string>
    <string name="date_time">Date\Time</string>
    <string name="notes">Notes</string>
    <string name="reverse_trip_view">Reverse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_sign_out">Sign out</string>
    <string name="nav_upcoming_trips">Upcoming Trips</string>
    <string name="nav_past_trips">Past Trips</string>
    <string name="nav_about">About</string>
    <string name="title_activity_add_trip">AddTrip</string>
    <string-array name="reminder_array">
        <item>on time</item>
        <item>5 mins before</item>
        <item>10 mins before</item>
        <item>15 mins before</item>
        <item>20 mins before</item>
        <item>25 mins before</item>
        <item>30 mins before</item>
        <item>35 mins before</item>
        <item>40 mins before</item>
        <item>45 mins before</item>
        <item>50 mins before</item>
        <item>55 mins before</item>
        <item>an hour before</item>
    </string-array>
    <string name="round_one_direction_view">Round/Onedirection</string>
    <string name="reminder_view">Reminder</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="no_internet_connection">No Internet Connection, Try Again.</string>
    <string name="auth_success">Authentication OK</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
</resources>
