<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ahmedosman.tripplanner.viewtrip.ViewTrip"
    tools:showIn="@layout/activity_view_trip">

    <LinearLayout
        android:id="@+id/notes_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_point"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_point"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_time"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/round_one_direction_view"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_view"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notes"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/start_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/end_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/round_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/reminder_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
